# course-level-3-certificate-data-science

./: .gitignore  README.md  main.py  notes.ipynb  pyproject.toml  slides.ipynb
assessment/: Dennis_Ideler-Data_Sci_01_Unit_Assessment.docx  LEARNER NAME - Data Sci 01 Unit Assessment.docx  Learner Name - NCFE L3C Data - Tracker.xlsx
code_samples/: SQL_Settings.py  os_environs.py  pySQL_00_connect.py  pySQL_01_create_db.py  pySQL_02_check_db.py  pySQL_03_show_databases.py  pySQL_04_create_table.py  pySQL_05_create_table_priKey.py  pySQL_06_check_table.py  pySQL_07_insertIntoTable.py  pySQL_08_insertIntoTable02.py  pySQL_09_selectFromTable.py  pySQL_10_fetchFive.py  pySQL_10_fetchOneRec.py  pySQL_11_selectWhere.py  pySQL_12_orderBy.py  pySQL_13_deleteFrom.py  pySQL_14_dropTable.py  pySQL_15_join.py  pySQL_15_updateTable.py
data/: cars.csv  sqlite.db
notes/: notes.ipynb
project/: README.md  docker-compose.yml  pyproject.toml
project/src/: main.py
project/src/db/: connection.py  create_schema_prod.py  create_schema_raw.py  create_schemas.py
project_ideas/: idea_1.ipynb
slides/: .gitkeep
