[project]
name = "personal-finance-analyser"
version = "0.1.0"
description = "Datawarehouse and datascience for financial statements"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
